# Cambricon_easydk

./: CMakeLists.txt  rea
docs/: make.bat
samples/: CMakeLists.txt
samples/include/: cnpostproc.h  inference.h
samples/src/: alphapose.cpp  baseInfer.cpp  cnpostproc.cpp  ddrnet.cpp  inference.cpp
samples/test/: CMakeLists.txt  classification.cpp  crowdcount.cpp  detection.cpp  detection_batch.cpp  insegment.cpp  stream_app.cpp  testClassify.cpp  testHDdetect.cpp  testMtcnn.cpp  testTiny.cpp  test_DDRnet.cpp  test_fpnseg.cpp  test_pose.cpp  test_road.cpp  test_segment.cpp  test_yolov4csp.cpp
src/cxxutil/: log.cpp
src/easycodec/: easy_decode.cpp
src/easyinfer/: mlu_memory_op.cpp
